<resources>
    <string name="app_name">GMT</string>
    <string name="user_name">Name</string>
    <string name="phone">Phone</string>
    <string name="enter_user_password">Enter User Password</string>
    <string name="enter_user_phone_number">Enter user Phone Number</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="gotmytrip_password">GotMyTrip Password</string>
    <string name="email_id">Email Id </string>
    <string name="phonenumber">Phone Number</string>
    <string name="sigup">Create Account Here !</string>
    <string name="signuphere">Signup Here !</string>
    <string name="username">User Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="Register_btn">Register</string>
    <string name="login_here">Login Here !</string>
    <string name="reg">Register</string>
    <string name="phone_number">Phone Number</string>
    <string name="condition">condition</string>
    <string name="i_accept_terms_and_conditions">I Accept Terms And Conditions</string>
    <string name="register_button">Register</string>
    <string name="submit">Submit</string>
    <string name="email_address">Email Address</string>
    <string name="submit_otp">Submit</string>
    <string name="For_phone_number">Phone Number</string>
    <string name="enter_otp_number">Enter OTP Number</string>

    <string name="title_activity_maps">Map</string>
    <string name="title_activity_rental">Rental Booking</string>
    <string name="terms"><u><font color="#ffd700">Terms and Conditions</font></u></string>
    <string name="terms_and_conditions"><u><font color="#ffd700">Terms and Conditions</font></u></string>
    <string name="title_activity_outstation">Outstation Booking</string>
    <string name="title_activity_your_rides">Your rides</string>
    <string name="title_activity_city">City Booking</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pasnotchanged">Password is not changed</string>
    <string name="title_activity_my_settings">MySettingsActivity</string>
</resources>
