<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:srcCompat="@drawable/newlogo"
        tools:ignore="ContentDescription" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/phonenumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/textview_border"
            android:drawableStart="@drawable/ic_username"
            android:drawablePadding="10dp"
            android:fontFamily="sans-serif"
            android:maxLength="10"
            android:paddingEnd="5dp"
            android:paddingStart="0dp"
            android:textSize="13sp"
            android:hint="@string/phonenumber"
            android:inputType="phone"
            android:textColor="#ffff"
            android:textColorHint="#ffff"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/confirm_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:paddingEnd="5dp"
            android:paddingStart="0dp"
            android:background="@drawable/textview_border"
            android:drawableStart="@drawable/ic_user_password"
            android:drawablePadding="10dp"
            android:hint="@string/gotmytrip_password"
            android:maxLength="8"
            android:inputType="textPassword"
            android:textColor="#ffff"
            android:textColorHint="#ffff"
            android:fontFamily="sans-serif"
            android:textSize="13sp"
            tools:ignore="Autofill" />

        <com.dx.dxloadingbutton.lib.LoadingButton
            android:id="@+id/loading_btn"
            android:onClick="login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            app:lb_btnText="Login"
            app:lb_btnColor="@color/textline"
            app:lb_resetAfterFailed="true"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="sans-serif"
                android:onClick="create_account"
                android:text="@string/sigup"
                android:textAlignment="viewStart"
                android:textColor="@color/colorAccent"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif"
                android:gravity="end"
                android:onClick="forgot"
                android:text="@string/forgot_password"
                android:textColor="#fff"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>