<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".Forgot_password">


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:srcCompat="@drawable/newlogo"
        tools:ignore="ContentDescription" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="349dp"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editText4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/textview_border"
            android:drawableStart="@drawable/user_mail_icon"
            android:drawablePadding="10dp"
            android:fontFamily="sans-serif"
            android:paddingEnd="5dp"
            android:textSize="13sp"
            android:paddingStart="0dp"
            android:hint="@string/email_id"
            android:inputType="textEmailAddress"
            android:textColor="#ffff"
            android:textColorHint="#ffff"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/editText5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/textview_border"
            android:drawableStart="@drawable/ic_username"
            android:drawablePadding="10dp"
            android:fontFamily="sans-serif"
            android:textSize="13sp"
            android:hint="@string/For_phone_number"
            android:inputType="phone"
            android:paddingEnd="5dp"
            android:paddingStart="0dp"
            android:maxLength="10"
            android:textColor="#ffff"
            android:textColorHint="#ffff"
            tools:ignore="Autofill" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:background="@color/textline"
            android:fontFamily="serif"
            android:text="@string/submit"
            android:onClick="submit"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="#ffff"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:text="Login"
            tools:ignore="OnClick" />

    </LinearLayout>
</LinearLayout>